main.css
* {
    margin: 0;
}

#wrapper {
    width: 100vw;
    height: 100vh;
}

#main-banner {
    width: 100%;
    height: 100%;
    background-image: url(images/main-banner/main-banner-dark.jpg);
    background-size: cover;
    background-position-y: bottom;
    background-position-x: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

}

#name {
    width: 100%;
    height: 15%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 150px;
    font-weight: bold;
    letter-spacing: 1px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main-banner label {
    width: 100%;
    height: 15%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 28px;
    font-weight: bold;
    letter-spacing: 1px;
    color: white;
    margin-bottom: 3%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#begin-button {
    width: 13%;
    height: 5%;
    display: block;
    text-decoration: none;
    border: 2px solid white;
    border-radius: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    letter-spacing: 1px;
    color: white;
    cursor: pointer;
    transition: ease 0.3s;
}

#begin-button:hover {
    background-color: white;
    color: black;

}
#map-container {
    width: 100%;
    height: 100%;
    position: relative;
}
#search-fields-container {
    width: 25%;
    height: 100%;
    background-color: white;
    position: absolute;
    left: 0;
    z-index: 100;
    background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
    
}
#close-inputs-container {
    width: 100%;
    height:10%;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    
    
}
#close-icon {
    width: 37px;
    height: 37px;
    margin-right: 5%;
    background-image: url(images/icons/close.png);
    background-size: cover;
    cursor: pointer;
    transition: ease 0.4s;
}
#close-icon:hover{
    transform: scale(1.15)
}


#search-fields-title {
    width: 90%;
    height: 10%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 32px;
    font-weight: thin;
    display: flex;
    align-items: center;
    margin-left: 10%;
    opacity: 0.75;
}
form{
    width: 100%;
    height: 80%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
}


.inputs {
    width: 80%;
    height: 8%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 24px;
    background: transparent;
    border: none;
    border-bottom: solid black 1px;
    outline: 0;
    padding-left: 2%;
    
}

::placeholder{
    font-size: 20px;
    color: black;
    opacity: 0.6;
}

#calculate-button-container {
    width: 100%;
    height: 15%;
    display: flex;
    justify-content: center;
    align-items: center;
}
#calculate-button {
    width: 45%;
    height: 40%;
    background-color: transparent;
    outline: 0;
    border: solid black 1px;
    border-radius: 25px;
    transition: ease 0.3s;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    letter-spacing: 1px;

}
#calculate-button:hover {
    background-color: black;
    color: white;
}

#geolocation {
    position: absolute;
    top: 100px;
    right: 7px;
    width: auto;
    height: 20px;
    background-color: #1f262a;
    border-radius: 22px;
    color: #fff;
    padding: 6px;
    cursor: pointer;
    z-index: 100;
}

#geolocation:hover {
    color: #1f262a;
    background-color: white;
    border: 1px solid #1f262a;
}
.active {
    color: #1f262a !important;
    background-color: white !important;
    border: 1px solid #1f262a !important;
}

